fix layout issue

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -66,7 +66,7 @@ body {
     padding-left: 4rem;
   }
 
-  &__title:first-child {
+  &__title--padding {
     padding-top: $app-margin;
   }
 
